fixed second scrollbar issue in project history and resize issue in projects list

--- a/src/app/project-view/project-view.component.css
+++ b/src/app/project-view/project-view.component.css
@@ -1,5 +1,4 @@
 :host {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
